# mainlayer-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent_quickstart.py  create_resource.py  create_vendor.py  pay_for_resource.py  subscription_flow.py  vendor_onboarding.py
src/mainlayer/: __init__.py  _exceptions.py  _http.py  client.py  types.py
src/mainlayer/resources/: __init__.py  analytics.py  api_keys.py  auth.py  coupons.py  discover.py  entitlements.py  invoices.py  payments.py  plans.py  resources.py  subscriptions.py  vendor.py  webhooks.py
tests/: test_client.py
