[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mainlayer"
version = "0.1.0"
description = "Official Python SDK for Mainlayer — payment infrastructure for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mainlayer", email = "sdk@mainlayer.xyz" }]
keywords = ["mainlayer", "payments", "ai", "agents", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://mainlayer.xyz"
Documentation = "https://docs.mainlayer.xyz"
Repository = "https://github.com/mainlayer/mainlayer-python"
Issues = "https://github.com/mainlayer/mainlayer-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mainlayer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["examples/"]
